api rework [stage]
