# beacon/src/main/java/io/xpipe/beacon/api/ConnectionAddExchange.java
@@ -26,7 +26,8 @@ public class ConnectionAddExchange extends BeaconInterface<ConnectionAddExchange
         @NonNull
         DataStore data;
 
-        UUID category;
+        @NonNull
+        Boolean validate;
     }
 
     @Jacksonized
